# crater

./: .envrc  .gitignore  .gitmodules  .wpt-safe-subset-cache.json  AGENTS.md  CHANGELOG.md  README.mbt.md  TODO.md  Taskfile.pkl  agent-todo.md  crater  crater.mbt  crater_bench.mbt  crater_test.mbt  css_e2e_test.mbt  flake.nix  flaker-quarantine.json  flaker.star  flaker.toml  justfile  metrici.toml  moon.mod  moon.mod.json  moon.pkg  moon.pkg.json  moon.work  package-lock.json  package.json  pkg.generated.mbti  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  safe-subset.json  spec.md  tailwind-compat.json  tailwind-coverage.json  top.mbt  trace_test.mbt  tsconfig.json  (+3 more)
.claude/: settings.local.json
absolute/: absolute.mbt  moon.pkg.json
alignment/: alignment.mbt
aom/: aom_test.mbt  focus.mbt  moon.pkg  moon.pkg.json  name.mbt  pkg.generated.mbti  role.mbt  snapshot.mbt  snapshot_test.mbt  tree.mbt  types.mbt  wpt_accname_test.mbt  wpt_names_test.mbt  wpt_test.mbt
aomx/: README.md  moon.mod  moon.mod.json  moon.pkg  pkg.generated.mbti  top.mbt  top_test.mbt
bench/: BASELINE.md  css_compute_bench.mbt  moon.pkg  moon.pkg.json
benchmarks/: BASELINE.md  cascade_index_bench.mbt  css_compute_bench.mbt  gfx_raster_bench.mbt  layout_bench.mbt  moon.mod  moon.mod.json  moon.pkg  optimization_bench.mbt  paint_output_bench.mbt  pkg.generated.mbti  render_bench.mbt  render_bench_contract_wbtest.mbt  scroll_bench.mbt  static_snapshot_bench.mbt  static_snapshot_bench_wbtest.mbt  tree_benchmark_test.mbt  vrt_api_bench.mbt
block/: block.mbt  (+2 more)
(+3161 files in other folders)
