[project]
name = "crater-wpt-tests"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "websockets>=12.0",
    "webdriver",
]

[tool.uv.sources]
webdriver = { path = "wpt/tools/webdriver" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["*.py"]
python_functions = ["test_*"]
